[metadata]
name = chat-yooisae02
version = 0.0.1
author = yooisae
author_email = yooisae02@gamil.com
description = Education material "simple chat program"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src